# super-pooper

./: CMakeLists.txt  main.cpp  output.txt  text1.txt  text4.txt
1/: main.cpp
1.1/: main.cpp
10/: main.cpp  main_s.cpp
11/: main.cpp  scanner.cpp  scanner.hh
12/: main_c.cpp  main_str.cpp  main_wstring.cpp
13/: main.cpp
14/: main.cpp
15/: main.cpp
16/: main.cpp
17/: main.cpp
17.1/: main.cpp
18/: main.cpp
18.1/: main.cpp
2/: main.cpp
2.1/: main.cpp
2.1/point/: CMakeLists.txt  main.cpp  point2d.cpp  point2d.h  points.txt  util.cpp  util.h
3/: main.cpp
3.1/: main.cpp
4/: a.out  main  main.cpp
5/: main.cpp
5.1/: main.cpp
5.2/: main.cpp
5.3/: main.cpp
6.1/: main.cpp
6.2/: main.cpp
6.3/: main.cpp
6.4/: main.cpp
7/: main.cpp
8/: main.cpp
9/: main.cpp
str/: c_main.cpp  main.cpp  w_main.cpp
