cmake_minimum_required(VERSION 3.0.0)
project(lab VERSION 0.1.0)

add_executable(lab1 1/main.cpp)
add_executable(lab1.1 1.1/main.cpp)
add_executable(lab2 2/main.cpp)
add_executable(lab2.1 2.1/main.cpp)
add_executable(lab3 3/main.cpp)
add_executable(lab3.1 3.1/main.cpp)
add_executable(lab4 4/main.cpp)
add_executable(lab5 5/main.cpp)
add_executable(lab5.1 5.1/main.cpp)
add_executable(lab5.2 5.2/main.cpp)
add_executable(lab5.3 5.3/main.cpp)
add_executable(lab6 6/main.cpp)
add_executable(lab6.1 6.1/main.cpp)
add_executable(lab6.2 6.2/main.cpp)
add_executable(lab6.3 6.3/main.cpp)
add_executable(lab6.4 6.4/main.cpp)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
